--- a/Final-Code/book/templates/index.html
+++ b/Final-Code/book/templates/index.html
@@ -27,13 +27,13 @@
     <div class="album py-5 bg-light">
         <div class="container">
 
-    {% if q %}
+    <!-- {% if q %} -->
     <p>
         {% with results.count as total_results %}
         Found {{ total_results }} result{{ total_results|pluralize }}
         {% endwith %}
     </p>
-    {% endif %}
+    <!-- {% endif %} -->
 
             <div class="row">
                 {% for post in results %}
@@ -43,7 +43,7 @@
                             <div class="card-body">
                                 <h2 style="font-size:15px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
                                 <div class="d-flex justify-content-between align-items-center">
-                                    <small class="text-muted">{{post.headline|safe}}</small>
+                                    <small class="text-muted">{{post.authors}}</small>
                                 </div>
                             </div>
                         </div>
